Alterando arquivos HTML.

--- a/404.md
+++ b/404.md
@@ -1,9 +1,9 @@
 ---
 layout: page
-title: Page Not Found
+title: Página não encontrada!
 permalink: /404.html
 nocomments: true
 public: false
 ---
 
-Seems disappeared :(
+Hum... cadê o biscoito que estava aqui? :(
