--- a/docs/met563-3.md
+++ b/docs/met563-3.md
@@ -12,9 +12,9 @@ Site da disciplina "Introdução à Assimilação de Dados (MET 563-3)" do Progr
 
 ## Apresentação da Disciplina
 
-* Slides: [Aula1_IntroAssimDados.html](https://raw.githubusercontent.com/cfbastarz/MET563-3/refs/heads/main/Aula1_IntroAssimDados.html)
+* Slides: [Aula1_IntroAssimDados.html](https://raw.githubusercontent.com/cfbastarz/cfbastarz.github.io/refs/heads/master/docs/met563-3/Aula1_IntroAssimDados.html)
 
-<iframe src="https://raw.githubusercontent.com/cfbastarz/MET563-3/refs/heads/main/Aula1_IntroAssimDados.html"
+<iframe src="https://raw.githubusercontent.com/cfbastarz/cfbastarz.github.io/refs/heads/master/docs/met563-3/Aula1_IntroAssimDados.html"
         width="100%" height="600" style="border:none;">
 </iframe>
 
