--- a/docs/met563-3.md
+++ b/docs/met563-3.md
@@ -12,9 +12,9 @@ Site da disciplina "Introdução à Assimilação de Dados (MET 563-3)" do Progr
 
 ## Apresentação da Disciplina
 
-* Slides: [Aula1_IntroAssimDados.html](https://raw.githubusercontent.com/cfbastarz/cfbastarz.github.io/refs/heads/master/docs/met563-3/Aula1_IntroAssimDados.html)
+* Slides: [PDF](https://cfbastarz.github.io/MET563-3/Aula1_IntroAssimDados.html) | [HTML](https://cfbastarz.github.io/MET563-3/Aula1_IntroAssimDados.html)
 
-<iframe src="https://raw.githubusercontent.com/cfbastarz/cfbastarz.github.io/refs/heads/master/docs/met563-3/Aula1_IntroAssimDados.html"
+<iframe src="https://cfbastarz.github.io/MET563-3/Aula1_IntroAssimDados.html"
         width="100%" height="600" style="border:none;">
 </iframe>
 
@@ -45,8 +45,8 @@ Site da disciplina "Introdução à Assimilação de Dados (MET 563-3)" do Progr
 * Introdução do método 3DVar
   * Histórico e desenvolvimento 
   * Características principais 
-  * PSAS<sup>&#128312;</sup>
-  * FGAT<sup>&#128313;</sup>
+  * PSAS
+  * FGAT
 * Componentes 
   * Método de minimização da função custo do 3DVar
   * Matriz de Covariâncias dos Erros de Previsão
@@ -57,12 +57,12 @@ Site da disciplina "Introdução à Assimilação de Dados (MET 563-3)" do Progr
 
 ###  Métodos Baseados em Conjuntos (EnKF et al.)
 
-* Introdução ao método EnKF<sup>&#128312;</sup>
+* Introdução ao método EnKF
 * Histórico e desenvolvimento
 * Características principais 
 * Inflation e Localization
 * Visão geral sobre os esquemas derivados
-* Atividades realizadas no CPTEC com o método LETKF<sup>&#128313;</sup>
+* Atividades realizadas no CPTEC com o método LETKF
 
 ### Métodos Híbridos (Ensemble-Variacional)
 
