--- a/docs/met563-3.md
+++ b/docs/met563-3.md
@@ -12,11 +12,15 @@ Site da disciplina "Introdução à Assimilação de Dados (MET 563-3)" do Progr
 
 ## Apresentação da Disciplina
 
-* Slides: [PDF](https://cfbastarz.github.io/MET563-3/Aula1_IntroAssimDados.html) | [HTML](https://cfbastarz.github.io/MET563-3/Aula1_IntroAssimDados.html)
+* Slides: [PDF](https://cfbastarz.github.io/MET563-3/Aula1_IntroAssimDados.pdf) | [HTML](https://cfbastarz.github.io/MET563-3/Aula1_IntroAssimDados.html)
+
+<details>
 
 <iframe src="https://cfbastarz.github.io/MET563-3/Aula1_IntroAssimDados.html"
         width="100%" height="600" style="border:none;">
 </iframe>
+
+</details>
 
 ## Assuntos
 
