--- a/docs/met563-3.md
+++ b/docs/met563-3.md
@@ -1,6 +1,6 @@
 # MET 563-3
 
-Site da disciplina "Introdução à Assimilação de Dados (MET 563-3)" do Programa de Pós-Graduação em Meteorologia (PGMET) do INPE.
+Site do curso "Introdução à Assimilação de Dados (MET 563-3)" do Programa de Pós-Graduação em Meteorologia (PGMET) do INPE.
 
 ## Horário das Aulas
 
@@ -15,6 +15,8 @@ Site da disciplina "Introdução à Assimilação de Dados (MET 563-3)" do Progr
 * Slides: [PDF](https://cfbastarz.github.io/MET563-3/Aula1_IntroAssimDados.pdf) | [HTML](https://cfbastarz.github.io/MET563-3/Aula1_IntroAssimDados.html)
 
 <details>
+
+<summary>Mostrar a apresentação</summary>
 
 <iframe src="https://cfbastarz.github.io/MET563-3/Aula1_IntroAssimDados.html"
         width="100%" height="600" style="border:none;">
