Atualizando met563-3.md

--- a/docs/met563-3.md
+++ b/docs/met563-3.md
@@ -16,7 +16,7 @@ Site do curso "Introdução à Assimilação de Dados (MET 563-3)" do Programa d
 
 <details>
 
-<summary>Mostrar a apresentação</summary>
+<summary>&#128073; Mostrar a apresentação</summary>
 
 <iframe src="https://cfbastarz.github.io/MET563-3/Aula1_IntroAssimDados.html"
         width="100%" height="600" style="border:none;">
