Atualizando página met563-3.md

--- a/docs/met563-3.md
+++ b/docs/met563-3.md
@@ -12,25 +12,17 @@ Site do curso "Introdução à Assimilação de Dados (MET 563-3)" do Programa d
 
 ## Apresentação da Disciplina
 
-* Slides: [PDF](https://cfbastarz.github.io/MET563-3/Aula1_IntroAssimDados.pdf) | [HTML](https://cfbastarz.github.io/MET563-3/Aula1_IntroAssimDados.html)
-
-<details>
-
-<summary>&#128073; Mostrar a apresentação</summary>
-
-<iframe src="https://cfbastarz.github.io/MET563-3/Aula1_IntroAssimDados.html"
-        width="100%" height="600" style="border:none;">
-</iframe>
-
-</details>
+* &#128073; Slides: [PDF](https://cfbastarz.github.io/MET563-3/Aula1_IntroAssimDados.pdf) | [HTML](https://cfbastarz.github.io/MET563-3/Aula1_IntroAssimDados.html)
 
 ## Assuntos
 
 ### Motivação
 
-* Por que a assimilação de dados fornece uma estimativa ótima?
+* Por que a assimilação de dados fornece uma estimativa ótima? 
+    * &#128073; Slides 1 - [PDF](https://cfbastarz.github.io/MET563-3/Aula1_IntroAssimDados-AnlEmpiricaUni.pdf) | [HTML](https://cfbastarz.github.io/MET563-3/Aula1_IntroAssimDados-AnlEmpiricaUni.html)
+    * &#128073; Slides 2 - [PDF](https://cfbastarz.github.io/MET563-3/Aula1_IntroAssimDados-AnlEmpiricaMulti.pdf) | [HTML](https://cfbastarz.github.io/MET563-3/Aula1_IntroAssimDados-AnlEmpiricaMulti.html)
 * Histórico da Assimilação de Dados
-  * Revisão do histórico da assimilação de dados e das motivações para o seu desenvolvimento, passando pelos métodos tradicionais/clássicos até o estabelecimento dos métodos operacionais para modelos massivamente paralelos
+    * Revisão do histórico da assimilação de dados e das motivações para o seu desenvolvimento, passando pelos métodos tradicionais/clássicos até o estabelecimento dos métodos operacionais para modelos massivamente paralelos
 
 ### O Sistema Global de Observações Meteorológicas
 
@@ -42,22 +34,22 @@ Site do curso "Introdução à Assimilação de Dados (MET 563-3)" do Programa d
 ###  Métodos Clássicos (Esquemas de Interpolação Estatística)
 
 * Revisão dos métodos clássicos de assimilação de dados baseados em interpolação estatística
-  * Análise de Cressman
-  * Interpolação Ótima
+    * Análise de Cressman
+    * Interpolação Ótima
 
 ### Método Variacional
 
 * Revisão de Álgebra Linear (Operações com Matrizes)
 * Introdução do método 3DVar
-  * Histórico e desenvolvimento 
-  * Características principais 
-  * PSAS
-  * FGAT
+    * Histórico e desenvolvimento 
+    * Características principais 
+    * PSAS
+    * FGAT
 * Componentes 
-  * Método de minimização da função custo do 3DVar
-  * Matriz de Covariâncias dos Erros de Previsão
-  * Modelo de Transferência Radiativa
-  * Controle de Qualidade
+    * Método de minimização da função custo do 3DVar
+    * Matriz de Covariâncias dos Erros de Previsão
+    * Modelo de Transferência Radiativa
+    * Controle de Qualidade
 * Visão geral sobre o método 4DVar
 * Atividades realizadas no CPTEC com o método 3DVar
 
