Atualizando página met563-3.md

--- a/docs/met563-3.md
+++ b/docs/met563-3.md
@@ -23,6 +23,7 @@ Site do curso "Introdução à Assimilação de Dados (MET 563-3)" do Programa d
     * &#128073; Slides 2 - [PDF](https://cfbastarz.github.io/MET563-3/Aula1_IntroAssimDados-AnlEmpiricaMulti.pdf) | [HTML](https://cfbastarz.github.io/MET563-3/Aula1_IntroAssimDados-AnlEmpiricaMulti.html)
 * Histórico da Assimilação de Dados
     * Revisão do histórico da assimilação de dados e das motivações para o seu desenvolvimento, passando pelos métodos tradicionais/clássicos até o estabelecimento dos métodos operacionais para modelos massivamente paralelos
+    * &#128073; Slides - [PDF](https://cfbastarz.github.io/MET563-3/Aula2_IntroAssimDados-Historico.pdf) | [HTML](https://cfbastarz.github.io/MET563-3/Aula2_IntroAssimDados-Historico.html)
 
 ### O Sistema Global de Observações Meteorológicas
 
