Atualizando página met563-3.md

--- a/docs/met563-3.md
+++ b/docs/met563-3.md
@@ -4,11 +4,11 @@ Site do curso "Introdução à Assimilação de Dados (MET 563-3)" do Programa d
 
 ## Horário das Aulas
 
-* Segundas e quartas-feiras, das 14h30 às 16h30.
+* 🗓️ Segundas e quartas-feiras, das 14h30 às 16h30.
 
 ## Repositório do Curso
 
-* [https://github.com/cfbastarz/MET563-3](https://github.com/cfbastarz/MET563-3)
+* 🐙 [https://github.com/cfbastarz/MET563-3](https://github.com/cfbastarz/MET563-3)
 
 ## Apresentação da Disciplina
 
@@ -18,13 +18,39 @@ Site do curso "Introdução à Assimilação de Dados (MET 563-3)" do Programa d
 
 ### Motivação
 
-* Por que a assimilação de dados fornece uma estimativa ótima? 
-    * &#128073; Slides 1 - [PDF](https://cfbastarz.github.io/MET563-3/Aula1_IntroAssimDados-AnlEmpiricaUni.pdf) | [HTML](https://cfbastarz.github.io/MET563-3/Aula1_IntroAssimDados-AnlEmpiricaUni.html)
-    * &#128073; Slides 2 - [PDF](https://cfbastarz.github.io/MET563-3/Aula1_IntroAssimDados-AnlEmpiricaMulti.pdf) | [HTML](https://cfbastarz.github.io/MET563-3/Aula1_IntroAssimDados-AnlEmpiricaMulti.html)
-* Histórico da Assimilação de Dados
-    * Revisão do histórico da assimilação de dados e das motivações para o seu desenvolvimento, passando pelos métodos tradicionais/clássicos até o estabelecimento dos métodos operacionais para modelos massivamente paralelos
-    * &#128073; Slides 1 - [PDF](https://cfbastarz.github.io/MET563-3/Aula2_IntroAssimDados-Historico.pdf) | [HTML](https://cfbastarz.github.io/MET563-3/Aula2_IntroAssimDados-Historico.html)
-    * &#128073; Slides 2 - [PDF](https://cfbastarz.github.io/MET563-3/Aula2_IntroAssimDados-Historico-Cressman.pdf) | [HTML](https://cfbastarz.github.io/MET563-3/Aula2_IntroAssimDados-Historico-Cressman.html)
+* Equação de Análise Empírica: Por que a assimilação de dados fornece uma estimativa ótima? 
+    * &#128073; Aula 1 - [PDF](https://cfbastarz.github.io/MET563-3/Aula1_IntroAssimDados-AnlEmpiricaUni.pdf) | [HTML](https://cfbastarz.github.io/MET563-3/Aula1_IntroAssimDados-AnlEmpiricaUni.html)
+    * &#128073; Aula 2 - [PDF](https://cfbastarz.github.io/MET563-3/Aula1_IntroAssimDados-AnlEmpiricaMulti.pdf) | [HTML](https://cfbastarz.github.io/MET563-3/Aula1_IntroAssimDados-AnlEmpiricaMulti.html)
+
+#### Atividades
+
+* 🎲 Atividade 1: Equação de Análise Empírica Univariada - [Google Colab](https://colab.research.google.com/github/cfbastarz/MET563-3/blob/main/atividade_01_equacao_de_analise_empirica.ipynb) | [Repositório](https://github.com/cfbastarz/MET563-3/blob/main/atividade_01_equacao_de_analise_empirica.ipynb)
+* 🎲 Atividade 2: Equação de Análise Empírica Multivariada - [Google Colab](https://colab.research.google.com/github/cfbastarz/MET563-3/blob/main/atividade_02_equacao_de_analise_empirica_multi.ipynb) | [Repositório](https://github.com/cfbastarz/MET563-3/blob/main/atividade_02_equacao_de_analise_empirica.ipynb)
+
+### Histórico da Assimilação de Dados
+
+* Revisão do histórico da assimilação de dados e das motivações para o seu desenvolvimento, passando pelos métodos de análise empíricos de Bergthórsson e Döös (1959) e Cressman (1955) - Método de Correções Sucessivas e Gandin (1963) - Interpolação Ótima
+    * &#128073; Aula 3 - [PDF](https://cfbastarz.github.io/MET563-3/Aula2_IntroAssimDados-Historico.pdf) | [HTML](https://cfbastarz.github.io/MET563-3/Aula2_IntroAssimDados-Historico.html)
+    * &#128073; Aula 4 - [PDF](https://cfbastarz.github.io/MET563-3/Aula2_IntroAssimDados-Historico-Cressman.pdf) | [HTML](https://cfbastarz.github.io/MET563-3/Aula2_IntroAssimDados-Historico-Cressman.html)
+    * &#128073; Linha do Tempo da Assimilação de Dados no CPTEC - [PDF](https://cfbastarz.github.io/MET563-3/figs/linha_do_tempo_gad-2024-v3.pdf)
+
+#### Leitura Complementar
+
+* Livro - Richardson, 1922: [Weather Prediction by Numerical Process](https://x.gd/4ccVg)
+* Artigo - Panofsky, 1949: [Objective Weather Map Analysis](https://x.gd/sBmUk)
+* Artigo - Bergthórsson e Döös, 1955: [Numerical Weather Map Analysis](https://x.gd/qmxVS)
+* Artigo - Cressman, 1959: [An Operational Objective Analysis System](https://x.gd/DkMuD)
+* Review - Gandin, 1963: [Objective Analysis of Meteorological Fields](https://x.gd/TKtbo)
+* Post - Lynch, 2015: [Richardson’s Fantastic Forecast Factory](https://x.gd/TWX3t)
+* Webpage - [NOAA Teletypes](https://www.circuitousroot.com/artifice/telegraphy/tty/gallery/noaa/index.html)
+* Wikipedia - [IBM 704](https://en.wikipedia.org/wiki/IBM_704)
+* Wikipedia - [Baudot Code](https://en.wikipedia.org/wiki/Baudot_code)
+
+#### Atividades
+
+* 🎲 Atividade 3: Análise de Bergthórsson e Döös (1955) - [Google Colab](https://colab.research.google.com/github/cfbastarz/MET563-3/blob/main/atividade_03_analise_bd1955_1d2d.ipynb) | [Repositório](https://github.com/cfbastarz/MET563-3/blob/main/atividade_03_analise_bd1955_1d2d.ipynb)
+* 🎲 Atividade 4: Análise de Cressman (1959) - [Google Colab]() | [Repositório]()
+
 
 ### O Sistema Global de Observações Meteorológicas
 
@@ -32,12 +58,6 @@ Site do curso "Introdução à Assimilação de Dados (MET 563-3)" do Programa d
 * Os diferentes tipos de observações (_in situ_, por sensoriamento remoto e plataformas oceânicas) 
 * O fluxo de dados operacional no CPTEC para a Assimilação de Dados
 * Controle de Qualidade das Observações
-
-###  Métodos Clássicos (Esquemas de Interpolação Estatística)
-
-* Revisão dos métodos clássicos de assimilação de dados baseados em interpolação estatística
-    * Análise de Cressman
-    * Interpolação Ótima
 
 ### Método Variacional
 
