--- a/docs/met563-3.md
+++ b/docs/met563-3.md
@@ -49,7 +49,7 @@ Site do curso "Introdução à Assimilação de Dados (MET 563-3)" do Programa d
 #### Atividades
 
 * 🎲 Atividade 3: Análise de Bergthórsson e Döös (1955) - [Google Colab](https://colab.research.google.com/github/cfbastarz/MET563-3/blob/main/atividade_03_analise_bd1955_1d2d.ipynb) | [Repositório](https://github.com/cfbastarz/MET563-3/blob/main/atividade_03_analise_bd1955_1d2d.ipynb)
-* 🎲 Atividade 4: Análise de Cressman (1959) - [Google Colab]() | [Repositório]()
+* 🎲 Atividade 4: Análise de Cressman (1959) - [Google Colab](https://colab.research.google.com/github/cfbastarz/MET563-3/blob/main/atividade_04_analise_cressman1959_1d2d.ipynb) | [Repositório](https://github.com/cfbastarz/MET563-3/blob/main/atividade_04_analise_cressman1959_1d2d.ipynb)
 
 
 ### O Sistema Global de Observações Meteorológicas
