Atualizando página met563-3.md

--- a/docs/met563-3.md
+++ b/docs/met563-3.md
@@ -10,13 +10,13 @@ Site do curso "Introdução à Assimilação de Dados (MET 563-3)" do Programa d
 
 * 🐙 [https://github.com/cfbastarz/MET563-3](https://github.com/cfbastarz/MET563-3)
 
-## Apresentação da Disciplina
+## Assuntos
+
+### 1. Apresentação da Disciplina
 
 * &#128073; Slides: [PDF](https://cfbastarz.github.io/MET563-3/Aula1_IntroAssimDados.pdf) | [HTML](https://cfbastarz.github.io/MET563-3/Aula1_IntroAssimDados.html)
 
-## Assuntos
-
-### Motivação
+### 2. Motivação
 
 * Equação de Análise Empírica: Por que a assimilação de dados fornece uma estimativa ótima? 
     * &#128073; Aula 1 - [PDF](https://cfbastarz.github.io/MET563-3/Aula1_IntroAssimDados-AnlEmpiricaUni.pdf) | [HTML](https://cfbastarz.github.io/MET563-3/Aula1_IntroAssimDados-AnlEmpiricaUni.html)
@@ -27,7 +27,7 @@ Site do curso "Introdução à Assimilação de Dados (MET 563-3)" do Programa d
 * 🎲 Atividade 1: Equação de Análise Empírica Univariada - [Google Colab](https://colab.research.google.com/github/cfbastarz/MET563-3/blob/main/atividade_01_equacao_de_analise_empirica.ipynb) | [Repositório](https://github.com/cfbastarz/MET563-3/blob/main/atividade_01_equacao_de_analise_empirica.ipynb)
 * 🎲 Atividade 2: Equação de Análise Empírica Multivariada - [Google Colab](https://colab.research.google.com/github/cfbastarz/MET563-3/blob/main/atividade_02_equacao_de_analise_empirica_multi.ipynb) | [Repositório](https://github.com/cfbastarz/MET563-3/blob/main/atividade_02_equacao_de_analise_empirica.ipynb)
 
-### Histórico da Assimilação de Dados
+### 3. Histórico da Assimilação de Dados
 
 * Revisão do histórico da assimilação de dados e das motivações para o seu desenvolvimento, passando pelos métodos de análise empíricos de Bergthórsson e Döös (1959) e Cressman (1955) - Método de Correções Sucessivas e Gandin (1963) - Interpolação Ótima
     * &#128073; Aula 3 - [PDF](https://cfbastarz.github.io/MET563-3/Aula2_IntroAssimDados-Historico.pdf) | [HTML](https://cfbastarz.github.io/MET563-3/Aula2_IntroAssimDados-Historico.html)
@@ -52,14 +52,14 @@ Site do curso "Introdução à Assimilação de Dados (MET 563-3)" do Programa d
 * 🎲 Atividade 4: Análise de Cressman (1959) - [Google Colab](https://colab.research.google.com/github/cfbastarz/MET563-3/blob/main/atividade_04_analise_cressman1959_1d2d.ipynb) | [Repositório](https://github.com/cfbastarz/MET563-3/blob/main/atividade_04_analise_cressman1959_1d2d.ipynb)
 
 
-### O Sistema Global de Observações Meteorológicas
+### 4. O Sistema Global de Observações Meteorológicas
 
 * O que é o Sistema Global de Observações Meteorlógicas
 * Os diferentes tipos de observações (_in situ_, por sensoriamento remoto e plataformas oceânicas) 
 * O fluxo de dados operacional no CPTEC para a Assimilação de Dados
 * Controle de Qualidade das Observações
 
-### Método Variacional
+### 5. Método Variacional
 
 * Revisão de Álgebra Linear (Operações com Matrizes)
 * Introdução do método 3DVar
@@ -75,7 +75,7 @@ Site do curso "Introdução à Assimilação de Dados (MET 563-3)" do Programa d
 * Visão geral sobre o método 4DVar
 * Atividades realizadas no CPTEC com o método 3DVar
 
-###  Métodos Baseados em Conjuntos (EnKF et al.)
+###  6. Métodos Baseados em Conjuntos (EnKF et al.)
 
 * Introdução ao método EnKF
 * Histórico e desenvolvimento
@@ -84,37 +84,37 @@ Site do curso "Introdução à Assimilação de Dados (MET 563-3)" do Programa d
 * Visão geral sobre os esquemas derivados
 * Atividades realizadas no CPTEC com o método LETKF
 
-### Métodos Híbridos (Ensemble-Variacional)
+### 7. Métodos Híbridos (Ensemble-Variacional)
 
 * Introdução ao método híbrido ensemble-variacional 3DEnVar
 * Histórico e desenvolvimento
 * Características principais
 * Atividades realizadas no CPTEC com o método ensemble-variacional 3DEnVar
 
-### Frameworks de Assimilação de Dados
+### 8. Frameworks de Assimilação de Dados
 
 * Apresentação dos principais frameworks abertos para a assimilação de dados operacional: GSI e JEDI
 * Paradigmas de desenvolvimento do JEDI 
 * Atividades realizadas no CPTEC com o GSI e JEDI
 
-### Assimilação de Dados Regional
+### 9. Assimilação de Dados Regional
 
 * Apresentação sobre as particularidades de um sistema de assimilação de dados regional
 * Assimilação de Dados de Radar
 * Desenvolvimentos realizados no CPTEC
 
-### Impacto e Experimentos de Sistemas Observacionais
+### 10. Impacto e Experimentos de Sistemas Observacionais
 
 * Visão geral sobre a metodologia e a ferramenta para o estudo de impacto das observações empregada no sistema de assimilação de dados do CPTEC
 * Impacto da Assimilação das Observações
 * Observing System Experiment (OSE) e Observing System Simulation Experiment (OSSE)
 
-### Assimilação de Dados de Superfície
+### 11. Assimilação de Dados de Superfície
 
 * Apresentação sobre a assimilação de dados de superfície, seus impactos e desafios
 * Desenvolvimentos realizados no CPTEC
 
-### Reanálises
+### 12. Reanálises
 
 * O que é reanálise
 * Reanálise como ferramenta de validação de modelos numéricos
