--- a/docs/met563-3.md
+++ b/docs/met563-3.md
@@ -120,4 +120,6 @@ Site do curso "Introdução à Assimilação de Dados (MET 563-3)" do Programa d
 * Reanálise como ferramenta de validação de modelos numéricos
 * Desenvolvimentos realizados no CPTEC com reanálise regional
 
+## Cronograma de Aulas
 
+![Cronograma de Aulas](./img/cronograma.png)
