Atualizando página met563-3.md

--- a/docs/met563-3.md
+++ b/docs/met563-3.md
@@ -123,3 +123,8 @@ Site do curso "Introdução à Assimilação de Dados (MET 563-3)" do Programa d
 ## Cronograma de Aulas
 
 ![Cronograma de Aulas](./img/cronograma.png)
+
+**Legenda:**
+
+* X: não houve aula
+* S: Seminários dos alunos
