--- a/docs/met563-3.md
+++ b/docs/met563-3.md
@@ -1,4 +1,4 @@
-# MET 563-3
+# MET 563-3 (2025)
 
 Site do curso "Introdução à Assimilação de Dados (MET 563-3)" do Programa de Pós-Graduação em Meteorologia (PGMET) do INPE.
 
