Atualizando página met563-3.md

--- a/docs/met563-3.md
+++ b/docs/met563-3.md
@@ -1,4 +1,4 @@
-# MET 563-3 (2025)
+# MET 563-3
 
 Site do curso "Introdução à Assimilação de Dados (MET 563-3)" do Programa de Pós-Graduação em Meteorologia (PGMET) do INPE.
 
@@ -40,6 +40,7 @@ Site do curso "Introdução à Assimilação de Dados (MET 563-3)" do Programa d
 * Artigo - Panofsky, 1949: [Objective Weather Map Analysis](https://x.gd/sBmUk)
 * Artigo - Bergthórsson e Döös, 1955: [Numerical Weather Map Analysis](https://x.gd/qmxVS)
 * Artigo - Cressman, 1959: [An Operational Objective Analysis System](https://x.gd/DkMuD)
+* Livro - Gandin, 1963: [Objective Analysis of Meteorological Fields](https://x.gd/68xV7)
 * Review - Gandin, 1963: [Objective Analysis of Meteorological Fields](https://x.gd/TKtbo)
 * Post - Lynch, 2015: [Richardson’s Fantastic Forecast Factory](https://x.gd/TWX3t)
 * Webpage - [NOAA Teletypes](https://www.circuitousroot.com/artifice/telegraphy/tty/gallery/noaa/index.html)
@@ -58,6 +59,14 @@ Site do curso "Introdução à Assimilação de Dados (MET 563-3)" do Programa d
 * Os diferentes tipos de observações (_in situ_, por sensoriamento remoto e plataformas oceânicas) 
 * O fluxo de dados operacional no CPTEC para a Assimilação de Dados
 * Controle de Qualidade das Observações
+
+  * &#128073; Aula 5 - [PDF]()
+
+#### Leitura Complementar
+
+* WMO - [Global Observing System (GOS)](https://x.gd/cAeQP)
+* Newsletter ECMWF - [How to evolve global observing systems](https://x.gd/tat27)
+* Wikipedia - [Global Climate Observing System](https://x.gd/hDtcP)
 
 ### 5. Método Variacional
 
@@ -128,3 +137,6 @@ Site do curso "Introdução à Assimilação de Dados (MET 563-3)" do Programa d
 
 * X: não houve aula
 * S: Seminários dos alunos
+* D: Aula Dirceu
+* H: Aula Helena
+* L: Aula Liviany
