Atualizando página docs/met563-3.md

--- a/docs/met563-3.md
+++ b/docs/met563-3.md
@@ -33,6 +33,7 @@ Site do curso "Introdução à Assimilação de Dados (MET 563-3)" do Programa d
     * &#128073; Aula 3 - [PDF](https://cfbastarz.github.io/MET563-3/Aula2_IntroAssimDados-Historico.pdf) | [HTML](https://cfbastarz.github.io/MET563-3/Aula2_IntroAssimDados-Historico.html)
     * &#128073; Aula 4 - [PDF](https://cfbastarz.github.io/MET563-3/Aula2_IntroAssimDados-Historico-Cressman.pdf) | [HTML](https://cfbastarz.github.io/MET563-3/Aula2_IntroAssimDados-Historico-Cressman.html)
     * &#128073; Linha do Tempo da Assimilação de Dados no CPTEC - [PDF](https://cfbastarz.github.io/MET563-3/figs/linha_do_tempo_gad-2024-v3.pdf)
+    * &#128073; Aula 5 - [PDF](https://cfbastarz.github.io/MET563-3/Aula2_IntroAssimDados-Historico-Gandin.pdf) | [HTML](https://cfbastarz.github.io/MET563-3/Aula2_IntroAssimDados-Historico-Gandin.html)
 
 #### Leitura Complementar
 
