Atualizando página met563-3.md

--- a/docs/met563-3.md
+++ b/docs/met563-3.md
@@ -33,7 +33,7 @@ Site do curso "Introdução à Assimilação de Dados (MET 563-3)" do Programa d
     * &#128073; Aula 3 - [PDF](https://cfbastarz.github.io/MET563-3/Aula2_IntroAssimDados-Historico.pdf) | [HTML](https://cfbastarz.github.io/MET563-3/Aula2_IntroAssimDados-Historico.html)
     * &#128073; Aula 4 - [PDF](https://cfbastarz.github.io/MET563-3/Aula2_IntroAssimDados-Historico-Cressman.pdf) | [HTML](https://cfbastarz.github.io/MET563-3/Aula2_IntroAssimDados-Historico-Cressman.html)
     * &#128073; Linha do Tempo da Assimilação de Dados no CPTEC - [PDF](https://cfbastarz.github.io/MET563-3/figs/linha_do_tempo_gad-2024-v3.pdf)
-    * &#128073; Aula 5 - [PDF](https://cfbastarz.github.io/MET563-3/Aula2_IntroAssimDados-Historico-Gandin.pdf) | [HTML](https://cfbastarz.github.io/MET563-3/Aula2_IntroAssimDados-Historico-Gandin.html)
+    * &#128073; Aula 6 - [PDF](https://cfbastarz.github.io/MET563-3/Aula2_IntroAssimDados-Historico-Gandin.pdf) | [HTML](https://cfbastarz.github.io/MET563-3/Aula2_IntroAssimDados-Historico-Gandin.html)
 
 #### Leitura Complementar
 
@@ -52,6 +52,7 @@ Site do curso "Introdução à Assimilação de Dados (MET 563-3)" do Programa d
 
 * 🎲 Atividade 3: Análise de Bergthórsson e Döös (1955) - [Google Colab](https://colab.research.google.com/github/cfbastarz/MET563-3/blob/main/atividade_03_analise_bd1955_1d2d.ipynb) | [Repositório](https://github.com/cfbastarz/MET563-3/blob/main/atividade_03_analise_bd1955_1d2d.ipynb)
 * 🎲 Atividade 4: Análise de Cressman (1959) - [Google Colab](https://colab.research.google.com/github/cfbastarz/MET563-3/blob/main/atividade_04_analise_cressman1959_1d2d.ipynb) | [Repositório](https://github.com/cfbastarz/MET563-3/blob/main/atividade_04_analise_cressman1959_1d2d.ipynb)
+* 🎲 Atividade 5: Análise de Gandin (1963) - [Google Colab](https://colab.research.google.com/github/cfbastarz/MET563-3/blob/main/atividade_05_analise_gandin1963_1d2d.ipynb) | [Repositório](https://github.com/cfbastarz/MET563-3/blob/main/atividade_04_analise_gandin1963_1d2d.ipynb)
 
 
 ### 4. O Sistema Global de Observações Meteorológicas
