--- a/docs/met563-3.md
+++ b/docs/met563-3.md
@@ -139,6 +139,7 @@ Site do curso "Introdução à Assimilação de Dados (MET 563-3)" do Programa d
 
 * X: não houve aula
 * S: Seminários dos alunos
+* C: Aula Carlos
 * D: Aula Dirceu
 * H: Aula Helena
 * L: Aula Liviany
