--- a/docs/met563-3.md
+++ b/docs/met563-3.md
@@ -72,13 +72,14 @@ Site do curso "Introdução à Assimilação de Dados (MET 563-3)" do Programa d
 
 ### 5. Método Variacional
 
+* O que é o método variacional?
 * Revisão de Álgebra Linear (Operações com Matrizes)
+    * &#128073; Aula 7 - [PDF](https://cfbastarz.github.io/MET563-3/Aula2_IntroAssimDados-Variacional.pdf) | [HTML](https://cfbastarz.github.io/MET563-3/Aula2_IntroAssimDados-Variacional.html)
 * Introdução do método 3DVar
     * Histórico e desenvolvimento 
     * Características principais 
     * PSAS
     * FGAT
-    * &#128073; Aula 7 - [PDF](https://cfbastarz.github.io/MET563-3/Aula2_IntroAssimDados-Variacional.pdf) | [HTML](https://cfbastarz.github.io/MET563-3/Aula2_IntroAssimDados-Variacional.html)
     
 * Componentes 
     * Método de minimização da função custo do 3DVar
