Atualizando página met563-3.md

--- a/docs/met563-3.md
+++ b/docs/met563-3.md
@@ -89,6 +89,13 @@ Site do curso "Introdução à Assimilação de Dados (MET 563-3)" do Programa d
 * Visão geral sobre o método 4DVar
 * Atividades realizadas no CPTEC com o método 3DVar
 
+#### Leitura Complementar
+
+* RMetS - [Analysis methods for numerical weather prediction](https://x.gd/Wonbz)
+* ECMWF - [Variational Data Assimilation: Theory and Overview](https://x.gd/l32iw)
+* ECMWF - [Assimilation techniques (3): 3dVar](https://x.gd/PSYXM)
+* JMSJ - [Unified Notation for Data Assimilation: Operational, Sequential and Variational](https://x.gd/CeGlr)
+
 ###  6. Métodos Baseados em Conjuntos (EnKF et al.)
 
 * Introdução ao método EnKF
