--- a/docs/met563-3.md
+++ b/docs/met563-3.md
@@ -151,5 +151,7 @@ Site do curso "Introdução à Assimilação de Dados (MET 563-3)" do Programa d
 * S: Seminários dos alunos
 * C: Aula Carlos
 * D: Aula Dirceu
+* E: Aula Éder
 * H: Aula Helena
+* J: Aula João
 * L: Aula Liviany
