--- a/docs/met563-3.md
+++ b/docs/met563-3.md
@@ -84,10 +84,11 @@ Site do curso "Introdução à Assimilação de Dados (MET 563-3)" do Programa d
 * Componentes 
     * Método de minimização da função custo do 3DVar
     * Matriz de Covariâncias dos Erros de Previsão
-    * Modelo de Transferência Radiativa
-    * Controle de Qualidade
+    * ~~Modelo de Transferência Radiativa~~
+    * ~~Controle de Qualidade~~
 * Visão geral sobre o método 4DVar
 * Atividades realizadas no CPTEC com o método 3DVar
+    * &#128073; Aula 8 - [PDF](https://cfbastarz.github.io/MET563-3/Aula2_IntroAssimDados-Variacional-pt2.pdf) | [HTML](https://cfbastarz.github.io/MET563-3/Aula2_IntroAssimDados-Variacional-pt2.html)
 
 #### Leitura Complementar
 
