Atualizando página met563-3.md

--- a/docs/met563-3.md
+++ b/docs/met563-3.md
@@ -97,6 +97,10 @@ Site do curso "Introdução à Assimilação de Dados (MET 563-3)" do Programa d
 * ECMWF - [Assimilation techniques (3): 3dVar](https://x.gd/PSYXM)
 * JMSJ - [Unified Notation for Data Assimilation: Operational, Sequential and Variational](https://x.gd/CeGlr)
 
+#### Atividades
+
+* 🎲 Atividade 6: Método do Gradiente Descendente - [Google Colab](https://colab.research.google.com/github/cfbastarz/MET563-3/blob/main/atividade_06_metodo_gradiente_descendende.ipynb) | [Repositório](https://github.com/cfbastarz/MET563-3/blob/main/atividade_06_metodo_gradiente_descendende.ipynb)
+
 ###  6. Métodos Baseados em Conjuntos (EnKF et al.)
 
 * Introdução ao método EnKF
