--- a/docs/met563-3.md
+++ b/docs/met563-3.md
@@ -109,6 +109,11 @@ Site do curso "Introdução à Assimilação de Dados (MET 563-3)" do Programa d
 * Inflation e Localization
 * Visão geral sobre os esquemas derivados
 * Atividades realizadas no CPTEC com o método LETKF
+    * &#128073; Aula 9 - [PDF](https://cfbastarz.github.io/MET563-3/Aula1_IntroAssimDados-BayesRecursivo.pdf) | [HTML](https://cfbastarz.github.io/MET563-3/Aula1_IntroAssimDados-BayesRecursivo.html)
+
+#### Atividades
+
+* 🎲 Atividade 7: Filtro de Bayes Recursivo - [Google Colab](https://colab.research.google.com/github/cfbastarz/MET563-3/blob/main/atividade_07_filtro_bayes_recursivo.ipynb) | [Repositório](https://github.com/cfbastarz/MET563-3/blob/main/atividade_07_filtro_bayes_recursivo.ipynb)
 
 ### 7. Métodos Híbridos (Ensemble-Variacional)
 
