--- a/docs/met563-3.md
+++ b/docs/met563-3.md
@@ -14,26 +14,26 @@ Site do curso "Introdução à Assimilação de Dados (MET 563-3)" do Programa d
 
 ### 1. Apresentação da Disciplina
 
-* &#128073; Slides: [PDF](https://cfbastarz.github.io/MET563-3/Aula1_IntroAssimDados.pdf) | [HTML](https://cfbastarz.github.io/MET563-3/Aula1_IntroAssimDados.html)
+* &#128073; Slides: [HTML](https://cfbastarz.github.io/MET563-3/Aula1_IntroAssimDados.html)
 
 ### 2. Motivação
 
 * Equação de Análise Empírica: Por que a assimilação de dados fornece uma estimativa ótima? 
-    * &#128073; Aula 1 - [PDF](https://cfbastarz.github.io/MET563-3/Aula1_IntroAssimDados-AnlEmpiricaUni.pdf) | [HTML](https://cfbastarz.github.io/MET563-3/Aula1_IntroAssimDados-AnlEmpiricaUni.html)
-    * &#128073; Aula 2 - [PDF](https://cfbastarz.github.io/MET563-3/Aula1_IntroAssimDados-AnlEmpiricaMulti.pdf) | [HTML](https://cfbastarz.github.io/MET563-3/Aula1_IntroAssimDados-AnlEmpiricaMulti.html)
+    * &#128073; Aula 1 - [HTML](https://cfbastarz.github.io/MET563-3/Aula1_IntroAssimDados-AnlEmpiricaUni.html)
+    * &#128073; Aula 2 - [HTML](https://cfbastarz.github.io/MET563-3/Aula1_IntroAssimDados-AnlEmpiricaMulti.html)
 
 #### Atividades
 
-* 🎲 Atividade 1: Equação de Análise Empírica Univariada - [Google Colab](https://colab.research.google.com/github/cfbastarz/MET563-3/blob/main/atividade_01_equacao_de_analise_empirica.ipynb) | [Repositório](https://github.com/cfbastarz/MET563-3/blob/main/atividade_01_equacao_de_analise_empirica.ipynb)
-* 🎲 Atividade 2: Equação de Análise Empírica Multivariada - [Google Colab](https://colab.research.google.com/github/cfbastarz/MET563-3/blob/main/atividade_02_equacao_de_analise_empirica_multi.ipynb) | [Repositório](https://github.com/cfbastarz/MET563-3/blob/main/atividade_02_equacao_de_analise_empirica.ipynb)
+* 🎲 Atividade 1: Equação de Análise Empírica Univariada - [Google Colab](https://colab.research.google.com/github/cfbastarz/MET563-3/blob/main/atividade_01_equacao_de_analise_empirica.ipynb)
+* 🎲 Atividade 2: Equação de Análise Empírica Multivariada - [Google Colab](https://colab.research.google.com/github/cfbastarz/MET563-3/blob/main/atividade_02_equacao_de_analise_empirica_multi.ipynb)
 
 ### 3. Histórico da Assimilação de Dados
 
 * Revisão do histórico da assimilação de dados e das motivações para o seu desenvolvimento, passando pelos métodos de análise empíricos de Bergthórsson e Döös (1959) e Cressman (1955) - Método de Correções Sucessivas e Gandin (1963) - Interpolação Ótima
-    * &#128073; Aula 3 - [PDF](https://cfbastarz.github.io/MET563-3/Aula2_IntroAssimDados-Historico.pdf) | [HTML](https://cfbastarz.github.io/MET563-3/Aula2_IntroAssimDados-Historico.html)
-    * &#128073; Aula 4 - [PDF](https://cfbastarz.github.io/MET563-3/Aula2_IntroAssimDados-Historico-Cressman.pdf) | [HTML](https://cfbastarz.github.io/MET563-3/Aula2_IntroAssimDados-Historico-Cressman.html)
+    * &#128073; Aula 3 - [HTML](https://cfbastarz.github.io/MET563-3/Aula2_IntroAssimDados-Historico.html)
+    * &#128073; Aula 4 - [HTML](https://cfbastarz.github.io/MET563-3/Aula2_IntroAssimDados-Historico-Cressman.html)
     * &#128073; Linha do Tempo da Assimilação de Dados no CPTEC - [PDF](https://cfbastarz.github.io/MET563-3/figs/linha_do_tempo_gad-2024-v3.pdf)
-    * &#128073; Aula 6 - [PDF](https://cfbastarz.github.io/MET563-3/Aula2_IntroAssimDados-Historico-Gandin.pdf) | [HTML](https://cfbastarz.github.io/MET563-3/Aula2_IntroAssimDados-Historico-Gandin.html)
+    * &#128073; Aula 6 - [HTML](https://cfbastarz.github.io/MET563-3/Aula2_IntroAssimDados-Historico-Gandin.html)
 
 #### Leitura Complementar
 
@@ -50,9 +50,9 @@ Site do curso "Introdução à Assimilação de Dados (MET 563-3)" do Programa d
 
 #### Atividades
 
-* 🎲 Atividade 3: Análise de Bergthórsson e Döös (1955) - [Google Colab](https://colab.research.google.com/github/cfbastarz/MET563-3/blob/main/atividade_03_analise_bd1955_1d2d.ipynb) | [Repositório](https://github.com/cfbastarz/MET563-3/blob/main/atividade_03_analise_bd1955_1d2d.ipynb)
-* 🎲 Atividade 4: Análise de Cressman (1959) - [Google Colab](https://colab.research.google.com/github/cfbastarz/MET563-3/blob/main/atividade_04_analise_cressman1959_1d2d.ipynb) | [Repositório](https://github.com/cfbastarz/MET563-3/blob/main/atividade_04_analise_cressman1959_1d2d.ipynb)
-* 🎲 Atividade 5: Análise de Gandin (1963) - [Google Colab](https://colab.research.google.com/github/cfbastarz/MET563-3/blob/main/atividade_05_analise_gandin1963_1d2d.ipynb) | [Repositório](https://github.com/cfbastarz/MET563-3/blob/main/atividade_05_analise_gandin1963_1d2d.ipynb)
+* 🎲 Atividade 3: Análise de Bergthórsson e Döös (1955) - [Google Colab](https://colab.research.google.com/github/cfbastarz/MET563-3/blob/main/atividade_03_analise_bd1955_1d2d.ipynb)
+* 🎲 Atividade 4: Análise de Cressman (1959) - [Google Colab](https://colab.research.google.com/github/cfbastarz/MET563-3/blob/main/atividade_04_analise_cressman1959_1d2d.ipynb)
+* 🎲 Atividade 5: Análise de Gandin (1963) - [Google Colab](https://colab.research.google.com/github/cfbastarz/MET563-3/blob/main/atividade_05_analise_gandin1963_1d2d.ipynb)
 
 
 ### 4. O Sistema Global de Observações Meteorológicas
@@ -74,7 +74,7 @@ Site do curso "Introdução à Assimilação de Dados (MET 563-3)" do Programa d
 
 * Cálculo variacional
 * Revisão de Álgebra Linear (Operações com Matrizes)
-    * &#128073; Aula 7 - [PDF](https://cfbastarz.github.io/MET563-3/Aula2_IntroAssimDados-Variacional.pdf) | [HTML](https://cfbastarz.github.io/MET563-3/Aula2_IntroAssimDados-Variacional.html)
+    * &#128073; Aula 7 - [HTML](https://cfbastarz.github.io/MET563-3/Aula2_IntroAssimDados-Variacional.html)
 * Introdução do método 3DVar
     * Histórico e desenvolvimento 
     * Características principais 
@@ -88,7 +88,7 @@ Site do curso "Introdução à Assimilação de Dados (MET 563-3)" do Programa d
     * ~~Controle de Qualidade~~
 * Visão geral sobre o método 4DVar
 * Atividades realizadas no CPTEC com o método 3DVar
-    * &#128073; Aula 8 - [PDF](https://cfbastarz.github.io/MET563-3/Aula2_IntroAssimDados-Variacional-pt2.pdf) | [HTML](https://cfbastarz.github.io/MET563-3/Aula2_IntroAssimDados-Variacional-pt2.html)
+    * &#128073; Aula 8 - [HTML](https://cfbastarz.github.io/MET563-3/Aula2_IntroAssimDados-Variacional-pt2.html)
 
 #### Leitura Complementar
 
@@ -99,7 +99,7 @@ Site do curso "Introdução à Assimilação de Dados (MET 563-3)" do Programa d
 
 #### Atividades
 
-* 🎲 Atividade 6: Método do Gradiente Descendente - [Google Colab](https://colab.research.google.com/github/cfbastarz/MET563-3/blob/main/atividade_06_metodo_gradiente_descendende.ipynb) | [Repositório](https://github.com/cfbastarz/MET563-3/blob/main/atividade_06_metodo_gradiente_descendende.ipynb)
+* 🎲 Atividade 6: Método do Gradiente Descendente - [Google Colab](https://colab.research.google.com/github/cfbastarz/MET563-3/blob/main/atividade_06_metodo_gradiente_descendende.ipynb)
 
 ###  6. Métodos Baseados em Conjuntos (EnKF et al.)
 
@@ -109,11 +109,22 @@ Site do curso "Introdução à Assimilação de Dados (MET 563-3)" do Programa d
 * Inflation e Localization
 * Visão geral sobre os esquemas derivados
 * Atividades realizadas no CPTEC com o método LETKF
-    * &#128073; Aula 9 - [PDF](https://cfbastarz.github.io/MET563-3/Aula1_IntroAssimDados-BayesRecursivo.pdf) | [HTML](https://cfbastarz.github.io/MET563-3/Aula1_IntroAssimDados-BayesRecursivo.html)
+    * &#128073; Aula 9 - [HTML](https://cfbastarz.github.io/MET563-3/Aula1_IntroAssimDados-BayesRecursivo.html)
+
+#### Leitura Complementar
+
+* Artigo - [The Ensemble Kalman Filter: Theoretical Formulation and PracticalImplementation](https://x.gd/qqgdn)
+* Artigo - [Understanding the Ensemble Kalman Filter](https://x.gd/szoC9)
+* Artigo - [A New Approach to Linear Filteringand Prediction Problems](https://x.gd/SFMtF)
+* Artigo - [Sequential data assimilation with a nonlinear quasi-geostrophic model using Monte Carlo methods to forecast error statistics](https://x.gd/3wEZv)
+* Artigo - [Inclusion of Global Navigation Satellite System radio occultation data intoCenter for Weather Forecast and Climate Studies Local Ensemble TransformKalman Filter (LETKF) using the Radio Occultation Processing Package as anobservation operator](https://x.gd/4pvTm)
+* Video - [Ensemble Kalman Filter](https://youtu.be/UeFsEOGz_cc?si=nn_CFlLiZ6nUirXg)
+* Webpage - [Ensemble Kalman methods](https://x.gd/6QBtu)
+* Webpage - [Abakcus](https://x.gd/j3zcN)
 
 #### Atividades
 
-* 🎲 Atividade 7: Filtro de Bayes Recursivo - [Google Colab](https://colab.research.google.com/github/cfbastarz/MET563-3/blob/main/atividade_07_filtro_bayes_recursivo.ipynb) | [Repositório](https://github.com/cfbastarz/MET563-3/blob/main/atividade_07_filtro_bayes_recursivo.ipynb)
+* 🎲 Atividade 7: Filtro de Bayes Recursivo - [Google Colab](https://colab.research.google.com/github/cfbastarz/MET563-3/blob/main/atividade_07_filtro_bayes_recursivo.ipynb)
 
 ### 7. Métodos Híbridos (Ensemble-Variacional)
 
@@ -157,7 +168,7 @@ Site do curso "Introdução à Assimilação de Dados (MET 563-3)" do Programa d
 
 **Legenda:**
 
-* X: não houve aula
+* X: Não houve aula
 * S: Seminários dos alunos
 * C: Aula Carlos
 * D: Aula Dirceu
