--- a/docs/met563-3.md
+++ b/docs/met563-3.md
@@ -113,11 +113,11 @@ Site do curso "Introdução à Assimilação de Dados (MET 563-3)" do Programa d
 
 #### Leitura Complementar
 
-* Artigo - [The Ensemble Kalman Filter: Theoretical Formulation and PracticalImplementation](https://x.gd/qqgdn)
-* Artigo - [Understanding the Ensemble Kalman Filter](https://x.gd/szoC9)
-* Artigo - [A New Approach to Linear Filteringand Prediction Problems](https://x.gd/SFMtF)
-* Artigo - [Sequential data assimilation with a nonlinear quasi-geostrophic model using Monte Carlo methods to forecast error statistics](https://x.gd/3wEZv)
-* Artigo - [Inclusion of Global Navigation Satellite System radio occultation data intoCenter for Weather Forecast and Climate Studies Local Ensemble TransformKalman Filter (LETKF) using the Radio Occultation Processing Package as anobservation operator](https://x.gd/4pvTm)
+* Artigo - Kalman (1960): [A New Approach to Linear Filteringand Prediction Problems](https://x.gd/SFMtF)
+* Artigo - Evensen (1994): [Sequential data assimilation with a nonlinear quasi-geostrophic model using Monte Carlo methods to forecast error statistics](https://x.gd/mwsNYs)
+* Artigo - Evensen (2003):  [The Ensemble Kalman Filter: Theoretical Formulation and PracticalImplementation](https://x.gd/qqgdn)
+* Artigo - Katzfuss et al. (2016): [Understanding the Ensemble Kalman Filter](https://x.gd/szoC9)
+* Artigo - Sapucci et al. (2016): [Inclusion of Global Navigation Satellite System radio occultation data intoCenter for Weather Forecast and Climate Studies Local Ensemble TransformKalman Filter (LETKF) using the Radio Occultation Processing Package as anobservation operator](https://x.gd/4pvTm)
 * Video - [Ensemble Kalman Filter](https://youtu.be/UeFsEOGz_cc?si=nn_CFlLiZ6nUirXg)
 * Webpage - [Ensemble Kalman methods](https://x.gd/6QBtu)
 * Webpage - [Abakcus](https://x.gd/j3zcN)
