--- a/docs/met563-3.md
+++ b/docs/met563-3.md
@@ -126,12 +126,21 @@ Site do curso "Introdução à Assimilação de Dados (MET 563-3)" do Programa d
 
 * 🎲 Atividade 7: Filtro de Bayes Recursivo - [Google Colab](https://colab.research.google.com/github/cfbastarz/MET563-3/blob/main/atividade_07_filtro_bayes_recursivo.ipynb)
 
-### 7. Métodos Híbridos (Ensemble-Variacional)
+### 7. Métodos Híbridos
 
-* Introdução ao método híbrido ensemble-variacional 3DEnVar
+* Introdução aos métodos híbridos
 * Histórico e desenvolvimento
-* Características principais
-* Atividades realizadas no CPTEC com o método ensemble-variacional 3DEnVar
+* Sistema 3DVar híbrido
+    * Características principais
+    * Extensão da variável de controle
+    * Ciclo de assimilação de dados 3DVar híbrido
+* 3DVar híbrido baseado no modelo BAM e no GSI
+    * Determinação do conjunto de previsões inicial
+    * Cálculo da matriz **B** climatológica
+    * Experimentos com observação única
+    * Experimentos com o sistema 3DVar híbrido
+
+* &#128073; Aula 10 - [HTML](https://cfbastarz.github.io/MET563-3/Aula2_IntroAssimDados-Hibrido.html)
 
 ### 8. Frameworks de Assimilação de Dados
 
