--- a/docs/met563-3.md
+++ b/docs/met563-3.md
@@ -173,7 +173,7 @@ Site do curso "Introdução à Assimilação de Dados (MET 563-3)" do Programa d
 
 ## Cronograma de Aulas
 
-![Cronograma de Aulas](./img/cronograma.png)
+![Cronograma de Aulas](./img/cronograma-new.png)
 
 **Legenda:**
 
