Adicionando aula Helena

--- a/docs/met563-3.md
+++ b/docs/met563-3.md
@@ -141,6 +141,15 @@ Site do curso "Introdução à Assimilação de Dados (MET 563-3)" do Programa d
     * Experimentos com o sistema 3DVar híbrido
 
 * &#128073; Aula 10 - [HTML](https://cfbastarz.github.io/MET563-3/Aula2_IntroAssimDados-Hibrido.html)
+* &#128073; Aula 11 - [PDF](https://cfbastarz.github.io/MET563-3/aula_HM_10112025-1.pdf)
+
+#### Leitura Complementar
+
+* Artigo - Penny (2014): [The Hybrid Local Ensemble Transform Kalman Filter](https://x.gd/Wr3FC)
+* Artigo - Penny et al. (2015): [A Hybrid Global Ocean Data Assimilation System at NCEP](https://x.gd/23qgl)
+* Artigo - Bonavita et al. (2015): [EnKF and Hybrid Gain Ensemble Data Assimilation. Part II: EnKF and Hybrid Gain Results](https://x.gd/RxI8a)
+* Artigo - Azevedo et al. (2020): [Dynamically weighted hybrid gain data assimilation: perfect model testing](https://x.gd/Pw8qC)
+
 
 ### 8. Frameworks de Assimilação de Dados
 
