--- a/docs/met563-3.md
+++ b/docs/met563-3.md
@@ -153,9 +153,11 @@ Site do curso "Introdução à Assimilação de Dados (MET 563-3)" do Programa d
 
 ### 8. Frameworks de Assimilação de Dados
 
-* Apresentação dos principais frameworks abertos para a assimilação de dados operacional: GSI e JEDI
+* Apresentação dos frameworks GSI e JEDI para a assimilação de dados operacional
 * Paradigmas de desenvolvimento do JEDI 
 * Atividades realizadas no CPTEC com o GSI e JEDI
+
+* &#128073; Aula 12 - [HTML](https://cfbastarz.github.io/MET563-3/Aula2_IntroAssimDados-FrameworksAD.html)
 
 ### 9. Assimilação de Dados Regional
 
